fix more images

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             researchers believe that drastic and irreversible
             environmental changes will occur – heatwaves, droughts, floods,
             natural disasters and the extinction of species.
-            <img src="assets/images/climatechange_Zeichenfläche 1.svg"width="100%" />
+            <img src="assets/images/climatechange.svg"width="100%" />
           </p>
         
           <p>
