--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 
           <img src="assets/images/headline_5_youWantTo.png" style="width: 60%; margin:100px 0 100px 0;" />
 
-          <p style="font-size: 0.8em; margin-bottom: 100px;">
+          <p style="margin-bottom: 100px;">
             We collected some easy tips how you can change your lifestyle and at
             the same time make the world a better place. You can really make a
             difference!
