--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
           <img src="assets/images/headline_4_facts.png" width="30%" style="margin: 0 0 10vh 0;"/>
 
-          <img src="assets/images/facts.svg" width="80%" />
+          <img src="assets/images/facts_compressed.svg" width="80%" />
           <!-- <p>
             Did you know that one kilogram of beef consumes almost 15,500 liters
             of water? That is as much as 250 five-minute showers<br /><br />
